<resources>
    <string name="app_name">Ardak</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="loginin">Login In</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="forgetpass">Forget Password ?</string>
    <string name="creataccount">Not Have Account ? Click Her To Register</string>
    <string name="register">Register</string>
    <string name="username">user name</string>
    <string name="sign">sign up</string>
    <string name="confirmpass">Confirm password</string>
    <string name="ok">Ok</string>
    <string name="nointernet">please connect the internet</string>
    <string name="week">password week</string>
    <string name="empty">faild is empty</string>
    <string name="exist">email is exist</string>
    <string name="notmatch">password not match</string>
    <string name="virivi">"chek your phone "</string>
    <string name="wait">wait</string>
    <string name="createdaccount">created account</string>
    <string name="welcome">welcome back</string>
    <string name="phone">phone</string>
    <string name="roman">Roman</string>
    <string name="gawafa">gawafa</string>
    <string name="default_notification_channel_id">midoo</string>
    <string name="isopen">switch is open</string>
    <string name="choose">choose</string>
    <string name="gawafafrom">gawafa from</string>
    <string name="gawafato">gawafato</string>
    <string name="romanfrom">romanfrom</string>
    <string name="romanto">romanto</string>
    <string name="isclosed">switch is closed</string>
</resources>