<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/move"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/d30"
        android:layout_marginBottom="@dimen/d14"
        android:text="@string/register"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/txt_30sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fragment_register_txt_input_user_name"
        style="@style/text_input"
        android:layout_width="match_parent"
        android:layout_height="@dimen/d70"
        app:errorTextAppearance="@style/error_appearance">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/text_input_edit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableStart="@drawable/ic_imgprofile"
            android:hint="@string/username"
            android:inputType="text|textAutoCorrect|textAutoComplete" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fragment_register_txt_input_email"
        style="@style/text_input"
        android:layout_width="match_parent"
        android:layout_height="@dimen/d70"
        app:errorTextAppearance="@style/error_appearance">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/text_input_edit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableStart="@drawable/emailicon"
            android:hint="@string/email"
            android:inputType="textEmailAddress|textNoSuggestions" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fragment_register_txt_input_phone"
        style="@style/text_input"
        android:layout_width="match_parent"
        android:layout_height="@dimen/d70"
        app:errorTextAppearance="@style/error_appearance">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/text_input_edit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableStart="@drawable/ic_baseline_phone_24"
            android:hint="@string/phone"
            android:inputType="phone" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fragment_register_txt_input_password"
        style="@style/text_input"
        android:layout_width="match_parent"
        android:layout_height="@dimen/d70"
        app:errorTextAppearance="@style/error_appearance"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/text_input_edit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableStart="@drawable/passwordicon"
            android:hint="@string/password"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fragment_register_txt_input_confirm_password"
        style="@style/text_input"
        android:layout_width="match_parent"
        android:layout_height="@dimen/d70"
        app:errorTextAppearance="@style/error_appearance"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/text_input_edit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableStart="@drawable/passwordicon"
            android:hint="@string/confirmpass"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/fragment_register_btn_sign"
        style="@style/btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/sign" />


</LinearLayout>